Bug 1331988 - Don't provide DPI and related values until the TabChild has received the the ShowInfo, to avoid doing sync IPC. r=dvander

In bug 1331509, mRemoteFrame started getting populated earlier, while the DPI
and default scale values remained unpopulated until RecvShow was called. This
opened a small window where calling TabChild::GetDPI (and GetDefaultScale) would
result in a sync IPC message where previously it would just return -1. This
restores the original behaviour and elimintes the perf regression from the
sync IPC.

MozReview-Commit-ID: AikQmZjVHc9

--HG--
extra : rebase_source : f8c5245a4241c8cf7c2786407deb8c6ef71bb089